--- a/field-app/index.html
+++ b/field-app/index.html
@@ -23,9 +23,11 @@
       </div>
 
       <div class="toolbar">
-        <button id="btnSaveJson" class="btn btn-sm" type="button">Save JSON</button>
-        <label class="btn btn-sm btn-ghost" for="loadJson">Load JSON</label>
+        <button id="btnSaveJson" class="btn btn-sm" type="button">Export Scenario</button>
+        <label class="btn btn-sm btn-ghost" for="loadJson">Import Scenario</label>
         <input id="loadJson" type="file" accept="application/json" hidden />
+        <button id="btnExportCsv" class="btn btn-sm btn-ghost" type="button">Export Plan CSV</button>
+        <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
         <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
         <span class="divider"></span>
         <label class="switch">
