--- a/field-app/index.html
+++ b/field-app/index.html
@@ -45,6 +45,7 @@
   </header>
 
   <div id="importHashBanner" class="banner warn" hidden>Snapshot hash differs from exported hash.</div>
+  <div id="importWarnBanner" class="banner warn" hidden></div>
 
   <main class="shell">
     <section class="left">
