--- a/field-app/index.html
+++ b/field-app/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <div class="brand-title">Field Path Engine <span id="buildStamp" class="chip">v1.0 · build dev</span> <span id="selfTestBadge" class="badge unverified" title="Self-test gate">UNVERIFIED</span></div>
+      <div class="brand-title">Field Path Engine <span class="chip">v1.0</span></div>
       <div class="brand-sub">Darren Steptoe Consulting — Internal Use Only</div>
     </div>
 
@@ -26,13 +26,6 @@
         <button id="btnSaveJson" class="btn btn-sm" type="button">Export Scenario</button>
         <label class="btn btn-sm btn-ghost" for="loadJson">Import Scenario</label>
         <input id="loadJson" type="file" accept="application/json" hidden />
-        <select id="restoreBackupSelect" class="select select-sm" title="Restore a recent autosave backup"><option value="">Restore backup…</option></select>
-        <label class="switch switch-sm" title="When ON: block imports from newer schema or with hash mismatch.">
-          <input id="toggleStrictImport" type="checkbox" />
-          <span class="slider"></span>
-          <span class="switch-label">Strict import</span>
-        </label>
-        <button id="btnDiagnostics" class="btn btn-sm btn-ghost" type="button">Diagnostics</button>
         <button id="btnExportCsv" class="btn btn-sm btn-ghost" type="button">Export Plan CSV</button>
         <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
         <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
@@ -1366,29 +1359,6 @@
 
     </section>
   </main>
-
-  <div id="diagModal" class="modal" hidden>
-    <div class="modal-backdrop" data-close="1"></div>
-    <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="diagTitle">
-      <div class="modal-head">
-        <div>
-          <div id="diagTitle" class="modal-title">Diagnostics</div>
-          <div id="diagMeta" class="modal-sub"></div>
-        </div>
-        <button id="btnDiagClose" class="btn btn-sm btn-ghost" type="button" aria-label="Close">Close</button>
-      </div>
-      <div class="modal-body">
-        <div class="modal-actions">
-          <button id="btnCopyDebugBundle" class="btn btn-sm" type="button">Copy debug bundle</button>
-          <button id="btnClearErrors" class="btn btn-sm btn-ghost" type="button">Clear errors</button>
-        </div>
-        <div class="diag-errors">
-          <div class="diag-caption">Recent errors (most recent first)</div>
-          <div id="diagErrors" class="diag-list"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <script type="module" src="./js/app.js"></script>
 </body>
