--- a/field-app/index.html
+++ b/field-app/index.html
@@ -1439,6 +1439,8 @@
                   </div>
                 </div>
 
+              </div>
+
       <div class="card" data-accent style="--accent-bar: var(--phase-di);">
               <div class="card-head">
                 <h2>Validation</h2>
