--- a/field-app/index.html
+++ b/field-app/index.html
@@ -286,7 +286,7 @@
       </nav>
 
       <section class="panel active" id="tab-win">
-        <div class="card">
+        <div class="card phase-winpath">
           <div class="card-head">
             <h2>Win path (Expected)</h2>
           </div>
@@ -800,7 +800,7 @@
           </div>
         </div>
 
-<div class="card">
+<div class="card phase-p6">
   <div class="card-head">
     <h2>Turnout / GOTV (Phase 6)</h2>
   </div>
@@ -925,7 +925,7 @@
   <div id="turnoutSummary" class="banner ok" hidden></div>
 </div>
 
-<div class="card">
+<div class="card phase-p5">
   <div class="card-head">
     <h2>Optimization (Phase 5)</h2>
     <div class="card-actions">
@@ -1144,7 +1144,7 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card phase-p7">
   <div class="card-head">
     <h2>Timeline / Production (Phase 7)</h2>
   </div>
