--- a/field-app/index.html
+++ b/field-app/index.html
@@ -30,7 +30,7 @@
           <button id="btnDiagnostics" class="btn btn-sm" type="button">Diagnostics</button>
         </div>
 
-        <div class="topbar-group">
+        <div class="topbar-group topbar-restore">
           <select id="restoreBackup" class="input input-sm" title="Restore one of the last 5 auto-backups">
             <option value="">Restore backup…</option>
           </select>
@@ -341,10 +341,8 @@
               <div class="mini-s" id="miniPersCheck">—</div>
             </div>
           </div>
-        </div>
 
-        
-
+          <!-- Conversion / capacity roll-up (kept with Win Path outputs) -->
           <div class="subgrid">
             <div class="mini">
               <div class="mini-k">Total shifts needed</div>
