--- a/field-app/index.html
+++ b/field-app/index.html
@@ -17,38 +17,30 @@
     </div>
 
     <div class="topbar-actions">
-      <div class="scenario">
-        <label class="label" for="scenarioName">Scenario</label>
-        <input id="scenarioName" class="input input-sm" type="text" placeholder="e.g., IL HD-XX — Primary Path" />
-      </div>
-
+      <input id="toggleDark" type="checkbox" hidden />
       <div class="toolbar">
-        <button id="btnSaveJson" class="btn btn-sm" type="button">Export Scenario</button>
-        <label class="btn btn-sm btn-ghost" for="loadJson">Import Scenario</label>
-        <input id="loadJson" type="file" accept="application/json" hidden />
-        <select id="restoreBackup" class="input input-sm" title="Restore one of the last 5 auto-backups">
-          <option value="">Restore backup…</option>
-        </select>
-        <label class="switch switch-compact" title="Strict import blocks newer schema + hash mismatches">
-          <input id="toggleStrictImport" type="checkbox" />
-          <span class="slider"></span>
-          <span class="switch-label">Strict import</span>
-        </label>
-        <button id="btnDiagnostics" class="btn btn-sm btn-ghost" type="button">Diagnostics</button>
-        <button id="btnExportCsv" class="btn btn-sm btn-ghost" type="button">Export Plan CSV</button>
-        <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
-        <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
-        <span class="divider"></span>
         <label class="switch">
           <input id="toggleTraining" type="checkbox" />
           <span class="slider"></span>
           <span class="switch-label">Training</span>
         </label>
-        <label class="switch">
-          <input id="toggleDark" type="checkbox" />
+
+        <select id="restoreBackup" class="input input-sm" title="Restore one of the last 5 auto-backups">
+          <option value="">Restore backup…</option>
+        </select>
+
+        <label class="switch switch-compact">
+          <input id="toggleStrictImport" type="checkbox" />
           <span class="slider"></span>
-          <span class="switch-label">Dark</span>
+          <span class="switch-label">Strict import</span>
         </label>
+
+        <span class="divider"></span>
+
+        <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
+        <button id="btnExportCsv" class="btn btn-sm btn-ghost" type="button">Export Plan CSV</button>
+        <button id="btnDiagnostics" class="btn btn-sm btn-ghost" type="button">Diagnostics</button>
+        <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
       </div>
     </div>
   </header>
@@ -1451,6 +1443,18 @@
           </div>
       
           <div id="scWarn" class="banner warn" hidden></div>
+
+          <div class="sc-controls">
+            <div class="scenario">
+              <label class="label" for="scenarioName">Scenario</label>
+              <input id="scenarioName" class="input input-sm" type="text" placeholder="e.g., IL HD-XX — Primary Path" />
+            </div>
+            <div class="sc-actions">
+              <button id="btnSaveJson" class="btn btn-sm" type="button">Export Scenario</button>
+              <label class="btn btn-sm btn-ghost" for="loadJson">Import Scenario</label>
+              <input id="loadJson" type="file" accept="application/json" hidden />
+            </div>
+          </div>
       
           <div class="rowline" style="gap:10px; align-items:center; margin-top:8px; flex-wrap:wrap;">
             <button id="btnSaveScenario" class="btn btn-sm" type="button">Save Current Scenario</button>
