--- a/field-app/index.html
+++ b/field-app/index.html
@@ -25,7 +25,7 @@
           <span class="switch-label">Training</span>
         </label>
 
-        <span class="divider">|</span>
+        <span class="divider"> </span>
 
         <select id="restoreBackup" class="input input-sm" title="Restore one of the last 5 auto-backups">
           <option value="">Restore backup…</option>
