--- a/field-app/index.html
+++ b/field-app/index.html
@@ -37,19 +37,19 @@
           <span class="switch-label">Strict import</span>
         </label>
 
-        <span class="divider">|</span>
+        <span class="divider"> </span>
 
         <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
 
-        <span class="divider">|</span>
+        <span class="divider"> </span>
 
         <button id="btnExportCsv" class="btn btn-sm btn-ghost" type="button">Export Plan CSV</button>
 
-        <span class="divider">|</span>
+        <span class="divider"> </span>
 
         <button id="btnDiagnostics" class="btn btn-sm btn-ghost" type="button">Diagnostics</button>
 
-        <span class="divider">|</span>
+        <span class="divider"> </span>
 
         <button id="btnResetAll" class="btn btn-sm btn-ghost" type="button" title="Reset all fields">Reset</button>
       </div>
