--- a/field-app/index.html
+++ b/field-app/index.html
@@ -37,7 +37,7 @@
           <span class="switch-label">Strict import</span>
         </label>
 
-        <span class="divider"> </span>
+        <span class="divider"> | </span>
 
         <button id="btnCopySummary" class="btn btn-sm btn-ghost" type="button">Copy Summary</button>
 
