--- a/field-app/index.html
+++ b/field-app/index.html
@@ -17,6 +17,7 @@
     </div>
 
     <div class="topbar-actions">
+      <input id="toggleDark" type="checkbox" hidden />
       <div class="toolbar">
         <label class="switch">
           <input id="toggleTraining" type="checkbox" />
