--- a/field-app/index.html
+++ b/field-app/index.html
@@ -575,6 +575,14 @@
                       <tr><td>Shift needed (make P10 ≥ 0)</td><td class="num" id="mcShiftP10">—</td></tr>
                       <tr><td>Fragility index</td><td class="num" id="mcFragility">—</td></tr>
                       <tr><td>Cliff risk (near break-even)</td><td class="num" id="mcCliff">—</td></tr>
+                      <tr><td>Risk grade</td><td class="num" id="mcRiskGrade">—</td></tr>
+                      <tr><td>Shift needed (P(win) ≥ 60%)</td><td class="num" id="mcShift60">—</td></tr>
+                      <tr><td>Shift needed (P(win) ≥ 70%)</td><td class="num" id="mcShift70">—</td></tr>
+                      <tr><td>Shift needed (P(win) ≥ 80%)</td><td class="num" id="mcShift80">—</td></tr>
+                      <tr><td>Win prob loss under -10 shock</td><td class="num" id="mcShock10">—</td></tr>
+                      <tr><td>Win prob loss under -25 shock</td><td class="num" id="mcShock25">—</td></tr>
+                      <tr><td>Win prob loss under -50 shock</td><td class="num" id="mcShock50">—</td></tr>
+
                     </tbody>
                   </table>
                 </div>
